--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack -d --watch",
     "build": "webpack -p",
     "start": "node src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "webpack -p"
   },
   "keywords": [
     "react",
